ApiRepository basic implementations

--- a/TestWebAPI_PrimerNombre_PrimerApellido/TestWebAPI_PrimerNombre_PrimerApellido.csproj
+++ b/TestWebAPI_PrimerNombre_PrimerApellido/TestWebAPI_PrimerNombre_PrimerApellido.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Mapper\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
 </Project>
