--- a/TestWebAPI_PrimerNombre_PrimerApellido/TestWebAPI_PrimerNombre_PrimerApellido.csproj
+++ b/TestWebAPI_PrimerNombre_PrimerApellido/TestWebAPI_PrimerNombre_PrimerApellido.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
@@ -14,8 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
-    <Folder Include="Mapper\" />
     <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
